Feature/search string tuning (#1575)
* experimental(search): Set quick saturation for _topChipStr

* experimental(search): Include only mainTitle when top chip property is hasTitle